--- a/src/MEGASync/transfers/gui/win/TransfersAccountInfoWidget.ui
+++ b/src/MEGASync/transfers/gui/win/TransfersAccountInfoWidget.ui
@@ -63,34 +63,45 @@
 {
 	border-style: none;
 	border-radius: 4px;
-	background-color: #0000000D; /*colorToken.indicator-background*/
+	background-color: #EDEDED; /*colorToken.indicator-background*/
 	max-height: 8px;
 }
 
-#pbStorage::chunk
+#pbStorage::chunk[state=&quot;default&quot;]
 {
 	background-color: #477EF7; /*colorToken.indicator-indigo*/
-	border-radius: 4px;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
 }
 
-#pbStorage[state=&quot;default&quot;]
+#pbStorage::chunk[state=&quot;almost&quot;]
 {
-	background-color: #CFFCDB; /*colorToken.notification-success*/
-	color: #007C3E; /*colorToken.text-success*/
+	background-color: #FB6514; /*colorToken.indicator-orange*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
 }
 
-#pbStorage[state=&quot;warning&quot;]
+#pbStorage::chunk[state=&quot;almostfull&quot;]
 {
-	background-color: #FFE4E8; /*colorToken.notification-error*/
-	color: #E31B57; /*colorToken.text-error*/
+	background-color: #FB6514; /*colorToken.indicator-orange*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
 }
 
-#pbStorage[state=&quot;error&quot;]
+#pbStorage::chunk[state=&quot;full&quot;]
 {
-	background-color: #FFE4E8; /*colorToken.notification-error*/
-	color: #E31B57; /*colorToken.text-error*/
+	background-color: #F63D6B; /*colorToken.indicator-pink*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
 }
-
 </string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -300,17 +311,17 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>19</height>
+            <height>18</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>19</height>
+            <height>18</height>
            </size>
           </property>
           <property name="text">
-           <string>12.5 GB of 50 GB</string>
+           <string/>
           </property>
          </widget>
         </item>
