--- a/src/MEGASync/gui/macx/NotificationItem.ui
+++ b/src/MEGASync/gui/macx/NotificationItem.ui
@@ -120,20 +120,20 @@ background-color: rgba(0,0,0,0.1);
    <item>
     <widget class="QWidget" name="wContainer" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
-       <width>0</width>
+       <width>400</width>
        <height>0</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>16777215</width>
+       <width>400</width>
        <height>16777215</height>
       </size>
      </property>
@@ -368,14 +368,20 @@ background-color: rgba(0,0,0,0.1);
       <item>
        <widget class="QWidget" name="wVerticalContent" native="true">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>368</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
-          <width>16777215</width>
+          <width>368</width>
           <height>234</height>
          </size>
         </property>
@@ -401,14 +407,20 @@ background-color: rgba(0,0,0,0.1);
          <item>
           <widget class="QWidget" name="wHorizontalDescription" native="true">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="minimumSize">
+            <size>
+             <width>368</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="maximumSize">
             <size>
-             <width>16777215</width>
+             <width>368</width>
              <height>66</height>
             </size>
            </property>
@@ -508,14 +520,14 @@ background-color: rgba(0,0,0,0.1);
             <item>
              <widget class="QLabel" name="lImageLarge">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
               <property name="minimumSize">
                <size>
-                <width>0</width>
+                <width>368</width>
                 <height>0</height>
                </size>
               </property>
