--- a/src/MEGASync/transfers/gui/macx/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/macx/TransferManager.ui
@@ -387,12 +387,17 @@ QToolButton
 }
 
 /* 
-	TransfersAccountInfoWidget
+* TransfersAccountInfoWidget
 */
 
 #TransferManagerAccountInfo
 {
 	background-color: #FAFAFA;
+}
+
+#wSeparator
+{
+	background-color: #EEEEEE;
 }
 
 #bUpgrade
@@ -429,6 +434,77 @@ QToolButton
 {
 	background-color: #00BFA54D;
 }
+
+#pbStorage
+{
+	border-style: none;
+	border-radius: 4px;
+	background-color: #EDEDED; /*colorToken.indicator-background*/
+	max-height: 8px;
+}
+
+#pbStorage::chunk[state=&quot;default&quot;]
+{
+	background-color: #477EF7; /*colorToken.indicator-indigo*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
+}
+
+#pbStorage::chunk[state=&quot;almost&quot;]
+{
+	background-color: #FB6514; /*colorToken.indicator-orange*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
+}
+
+#pbStorage::chunk[state=&quot;almostfull&quot;]
+{
+	background-color: #FB6514; /*colorToken.indicator-orange*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+
+#pbStorage::chunk[state=&quot;full&quot;]
+{
+	background-color: #F63D6B; /*colorToken.indicator-pink*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+
+/*
+* AccountTypeWidget
+*/
+
+#bAccountType
+{
+	font-family: Inter;
+	font-size: 10px;
+    line-height: 14px;
+	font-weight: 600;
+	border-radius: 4px;
+    padding: 0px 8px;
+}
+
+#bAccountType[level=&quot;free&quot;]
+{
+	background-color: #CFFCDB; /*colorToken.notification-success*/
+	color: #007C3E; /*colorToken.text-success*/
+}
+
+#bAccountType[level=&quot;pro&quot;]
+{
+	background-color: #FFE4E8; /*colorToken.notification-error*/
+    color: #E31B57; /*colorToken.text-error*/
+}
+
 </string>
   </property>
   <layout class="QHBoxLayout" name="TransferManagerLayout">
