--- a/src/MEGASync/transfers/gui/win/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/win/TransferManager.ui
@@ -356,7 +356,7 @@ QGroupBox::title
 }
 
 /* 
-	TransfersAccountInfoWidget
+* TransfersAccountInfoWidget
 */
 
 #TransferManagerAccountInfo
@@ -405,7 +405,7 @@ QGroupBox::title
 }
 
 /* 
-	AccountTypeWidget
+* AccountTypeWidget
 */
 
 #bAccountType
