--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -166,19 +166,19 @@
         <file>common/Utilities.qml</file>
         <file>components/steps/StepPanel.qml</file>
         <file>syncs/SyncsPage.qml</file>
-        <file>deviceCenter/DeviceCenterDialog.qml</file>
-        <file>deviceCenter/DeviceCenterStrings.qml</file>
-        <file>deviceCenter/qmldir</file>
-        <file>deviceCenter/LeftSidebar.qml</file>
-        <file>deviceCenter/Toolbar.qml</file>
-        <file>deviceCenter/ToolbarButton.qml</file>
-        <file>deviceCenter/DevicePage.qml</file>
-        <file>deviceCenter/DevicePageHeader.qml</file>
-        <file>deviceCenter/DevicePageContent.qml</file>
-        <file>deviceCenter/NoInternetPage.qml</file>
-        <file>deviceCenter/NoConnectionsPage.qml</file>
-        <file>deviceCenter/SyncTablePage.qml</file>
-        <file>deviceCenter/DeviceWidgetProperty.qml</file>
+        <file>deviceCentre/DeviceCentreDialog.qml</file>
+        <file>deviceCentre/DeviceCentreStrings.qml</file>
+        <file>deviceCentre/qmldir</file>
+        <file>deviceCentre/LeftSidebar.qml</file>
+        <file>deviceCentre/Toolbar.qml</file>
+        <file>deviceCentre/ToolbarButton.qml</file>
+        <file>deviceCentre/DevicePage.qml</file>
+        <file>deviceCentre/DevicePageHeader.qml</file>
+        <file>deviceCentre/DevicePageContent.qml</file>
+        <file>deviceCentre/NoInternetPage.qml</file>
+        <file>deviceCentre/NoConnectionsPage.qml</file>
+        <file>deviceCentre/SyncTablePage.qml</file>
+        <file>deviceCentre/DeviceWidgetProperty.qml</file>
         <file>components/menus/MenuItem.qml</file>
         <file>components/menus/qmldir</file>
         <file>components/menus/ContextMenuItem.qml</file>
