--- a/src/MEGASync/transfers/gui/macx/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/macx/TransferManager.ui
@@ -372,6 +372,46 @@ QToolButton
     font-weight: 400;
 }
 
+#wLeftPane QFrame &gt; QLabel
+{
+    color: #999999;
+     font-weight: bold;
+    font-size: 10px;
+	text-align: right;
+    border-radius: 12px;
+}
+
+#wLeftPane QFrame[itsOn=true] 
+{
+	border-radius: 4px;
+    background: solid white;
+}
+
+#wLeftPane QFrame[itsOn=true] &gt; QLabel
+{
+    border: 1px solid #F5F5F5; 
+    background-color: #FAFAFA;
+    color: #333333;
+}
+
+#wLeftPane QFrame[itsOn=false] 
+{
+	border-radius: none;
+    background-color: transparent;
+}
+
+#wLeftPane QFrame[itsOn=false]  QLabel
+{
+    border: 1px transparent #FAFAFA; 
+    background: transparent;
+    color: #999999;
+}
+
+#wLeftPane QFrame[itsOn=false] QPushButton
+{
+    font-weight: normal;
+}
+
 /* 
 * Storage OQ text
 */
@@ -559,46 +599,7 @@ QToolButton
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">#wLeftPane QFrame &gt; QLabel
-{
-    color: #999999;
-     font-weight: bold;
-    font-size: 10px;
-	text-align: right;
-    border-radius: 12px;
-}
-
-#wLeftPane QFrame[itsOn=true] 
-{
-	border-radius: 4px;
-    background: solid white;
-}
-
-#wLeftPane QFrame[itsOn=true] &gt; QLabel
-{
-    border: 1px solid #F5F5F5; 
-    background-color: #FAFAFA;
-    color: #333333;
-}
-
-#wLeftPane QFrame[itsOn=false] 
-{
-	border-radius: none;
-    background-color: transparent;
-}
-
-#wLeftPane QFrame[itsOn=false]  QLabel
-{
-    border: 1px transparent #FAFAFA; 
-    background: transparent;
-    color: #999999;
-}
-
-#wLeftPane QFrame[itsOn=false] QPushButton
-{
-    font-weight: normal;
-}
-</string>
+      <string notr="true"/>
      </property>
      <layout class="QVBoxLayout" name="wLeftPaneLayout">
       <property name="spacing">
