--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
@@ -85,6 +85,20 @@ image: url(:/images/themed/light/checkbox_off_disabled.svg); /*replaceThemeToken
 /*
     QHeaderView
 */
+QScrollBar:vertical, QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical, QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical
+{
+border-style: none;
+}
+
+QScrollBar::handle:vertical
+{
+border: 1px solid #ffd8d9db; /*colorToken.border-strong*/
+border-radius: 6px;
+}
+
+/*
+    QHeaderView
+*/
 QHeaderView
 {
 background: #FF18191A; /*colorToken.page-background*/
