--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
@@ -83,17 +83,18 @@ image: url(:/images/themed/light/checkbox_off_disabled.svg); /*replaceThemeToken
 }
 
 /*
-    QHeaderView
+    QScrollBar
 */
 QScrollBar:vertical, QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical, QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical
 {
 border-style: none;
+max-width: 10px;
 }
 
 QScrollBar::handle:vertical
 {
 border: 1px solid #ffd8d9db; /*colorToken.border-strong*/
-border-radius: 6px;
+border-radius: 5px;
 }
 
 /*
