--- a/src/MEGASync/transfers/gui/win/TransferManagerDelegateWidget.ui
+++ b/src/MEGASync/transfers/gui/win/TransferManagerDelegateWidget.ui
@@ -638,7 +638,7 @@ QProgressBar::chunk
         </widget>
        </item>
        <item>
-        <widget class="QWidget" name="cSpeedITem" native="true">
+        <widget class="QWidget" name="cSpeedItem" native="true">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -1032,7 +1032,7 @@ QProgressBar::chunk
                </widget>
               </item>
               <item>
-            <widget class="QToolButton" name="tItemRetry">
+               <widget class="QToolButton" name="tItemRetry">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                   <horstretch>0</horstretch>
