--- a/src/MEGASync/transfers/gui/linux/TransfersSummaryWidget.ui
+++ b/src/MEGASync/transfers/gui/linux/TransfersSummaryWidget.ui
@@ -116,6 +116,9 @@ background: rgba(0,0,0,0.01);
        <height>24</height>
       </size>
      </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
      <property name="mouseTracking">
       <bool>true</bool>
      </property>
